2011-08-17  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-19 
	* added ascii chart to cpustat
	
2011-08-31  Andrei Spataru <andrei.cristian.spataru@cern.ch>
	
	* added BUFUInterface and documentation

2011-08-17  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-18 (16 fix for missing src file by fwyzard)
	* remove circular dep with Modules

2011-06-09  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-15
	* bug fixes in MsgBuf and change MicroState interface
	
2011-05-23  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-14
	* remove bin directory from tag 

2011-05-19  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-12
	* speedup of MicroStateService
	* increase max message size in message queues
	* introduce FSTOP signal

2011-05-13  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-11
	* changed max paths from 300 to 500 
	and max endpaths from 20 to 30

2011-05-11  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-10
	* added eols to process report struct

2011-03-24  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-09
	* put back forgotten TriggerReportDef.cc
	
2011-03-21  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-08
	* some cleanup of TriggerReportDef and work on improving cpu and 
	rate stat
	* minor addition to Css.h for SMProxyServer

2011-02-04  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-07
	* increased max endpaths to 20 in trs

2011-02-04  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-06
	* rate stat gathering
	
2011-02-03  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-05
	* fix bug in ParameterSetRetriever

2011-01-19  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-04
	* added support for path indices 

2011-01-19  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-03
	* 18-06 migrate to xml buildfile
	* 19-00 macosx compat
	* 19-01 64-bit fix
	* 19-02 remove compile flags
	* 19-03 add support for rate counting 
	*       microstate collection in iDie