@@ -1,3 +1,10 @@
+2011-10-21  Emilio Meschi <emilio.meschi@cern.ch>
+	
+	* tag V00-19-20
+	* fix crash of Vulture
+	* add instance and number of processes to cpustat report 
+	* bug fixes os ascii charts 
+
 2011-08-17  Emilio Meschi <emilio.meschi@cern.ch>
 	
 	* tag V00-19-19 
